code/sass/components/_header.scss
.header {
	position: relative;
	top: 3.3em;
	display: block;
	height: 45rem;
	background-color: $color-Hero-Background-light;
	background: linear-gradient( 135deg, $color-Hero-Background-light 0%, #007565 100% );
	overflow: hidden;
	perspective: 10px;
	z-index: 10;

	&:before,
	&:after {
		content: '';
		position: absolute;
		top: -50%;
		left: 20%;
		background-color: $color-Hero-Background-light;
		background: linear-gradient(
			to right,
			rgba( $color-Hero-Background-light, 0 ) 0%,
			rgba( $color-Hero-Background-light, 1 ) 30%,
			rgba( $color-Hero-Background-light, 1 ) 70%,
			rgba( $color-Hero-Background-light, 0 ) 100%
		);
		width: 8rem;
		height: 250%;
		transform: rotate( -45deg );
		opacity: 0.2;
		z-index: 10;

		@media screen and ( min-width: 500px ) {
			animation: light1 10s infinite;
		}
	}

	&:before {
		opacity: 0.3;
		width: 20rem;

		@media screen and ( min-width: 500px ) {
			animation: light2 20s infinite;
		}
	}
}

@keyframes light1 {
	from {
		left: 30%;
	}

	60% {
		left: 33%;
	}

	to {
		left: 30%;
	}
}

@keyframes light2 {
	from {
		width: 20rem;
	}

	50% {
		width: 25rem;
	}

	to {
		width: 20rem;
	}
}


// -------------------------------------------------------------------------------------------------------------------------------------------------------------
//  ROCKS
//
.header__rocks {
	position: absolute;
	z-index: 20;
}

.header__rocks--left {
	left: 0;
	bottom: 0;
	width: 330px;
	height: auto;
}

.header__rocks--right {
	right: -25rem;
	top: -2px;
	width: auto;
	height: 45.5rem;

	@media screen and ( min-width: 500px ) {
		right: -18rem;
	}

	@media screen and ( min-width: 1000px ) {
		right: -12rem;
	}
}

.header__rocks--back {
	left: 30%;
	bottom: 0;
	width: auto;
	height: 16rem;
	z-index: 9;
}


// -------------------------------------------------------------------------------------------------------------------------------------------------------------
//  LOGO
//
.header__logo {
	position: absolute;
	top: 5rem;
	left: 50%;
	width: 320px;
	margin-left: -160px;
	z-index: 20;
}

.header__logo__logo,
.header__logo__cuttlebelle {
	display: block;
	margin: 0 auto;
	height: auto;
}

.header__logo__logo {
	width: 184px;
	margin-bottom: 1rem;

	.logo-bubble,
	.logo-head,
	.logo-head-shadow {
		transition: fill 20s ease;
	}

	&:hover {
		.logo-bubble {
			fill: #c42b51;
			animation: skin 4s steps( 16 ) infinite;
		}

		.logo-head,
		.logo-head-shadow {
			fill: #ff5778;
			animation: skin 10s steps( 64 ) 0s infinite reverse;
		}
	}
}

.header__logo__cuttlebelle {
	width: 300px;
}

.header__logo__description {
	font-size: 1.125rem;
	text-align: center;
	color: $color-Text;
}

@keyframes skin {
	from {
		-webkit-filter: hue-rotate( 0deg );
		filter: hue-rotate( 0deg );
	}

	to {
		-webkit-filter: hue-rotate( -360deg );
		filter: hue-rotate( -360deg );
	}
}


// -------------------------------------------------------------------------------------------------------------------------------------------------------------
//  BUBBLE
//
.header__bubble {
	position: absolute;
	left: 14.5rem;
	top: 5rem;
	height: 40px;
	width: 40px;
	box-shadow: 0 5px 7px rgba( 0, 117, 101, 0.1 ), inset 2px 3px 6px 0px rgba( 255,255,255,0.8 );
	border-radius: 50%;

	&:after {
		content: '';
		position: absolute;
		left: 1px;
		width: 40px;
		height: 40px;
		border-radius: 50%;
		background: radial-gradient( ellipse at center, rgba( 255, 255, 255, 0.5 ) 0%, rgba( 255, 255, 255, 0 ) 50% );
		box-shadow: inset 0 3px 8px rgba( 255, 255, 255, 0.6 );
	}
}

.header__bubble--floater {
	transform: scale( 0.2 );
	left: -49px;
	top: 40px;
	z-index: 10;
}

.header__bubble--floater1 {
	transform: scale( 0.1 );
}

.header__bubble--floater2 {
	transform: scale( 0.3 );
}

.header__bubble--floater3 {
	transform: scale( 0.4 );
}

.header__bubble--left {
	left: 3rem;
}

.header__bubble__icon {
	position: absolute;
	left: 0.6rem;
	top: 0.7rem;
	width: 50%;
	height: auto;
}

.header__bubble__icon--content {
	width: 35%;
	left: 0.8rem;
	top: 0.8rem;
}


// -------------------------------------------------------------------------------------------------------------------------------------------------------------
//  FISH
//
.header__fishschool {
	position: absolute;
	left: 220px;
	bottom: 160px;
	animation: swim 80s infinite;

	@media screen and ( min-width: 1100px ) {
		bottom: 57px;
	}
}

.header__fishschool__fish {
	position: absolute;
	top: 0;
	left: 0;
	width: 12px;
	height: auto;
}

.header__fishschool__fish--3,
.header__fishschool__fish--4,
.header__fishschool__fish--5,
.header__fishschool__fish--8 {
	width: 10px;
}

.header__fishschool__fish--6,
.header__fishschool__fish--7 {
	width: 8px;
}

.header__fishschool__fish--1 {
	top: 9px;
}

.header__fishschool__fish--2 {
	left: 8px;
}

.header__fishschool__fish--3 {
	top: 7px;
	left: 19px;
}

.header__fishschool__fish--4 {
	top: 18px;
	left: 25px;
}

.header__fishschool__fish--5 {
	top: 10px;
	left: 31px;
	opacity: 0.8;
}

.header__fishschool__fish--6 {
	top: 16px;
	left: 39px;
	transform: rotate( -12deg );
	opacity: 0.7;
}

.header__fishschool__fish--7 {
	top: 5px;
	left: 41px;
}

.header__fishschool__fish--8 {
	top: 12px;
	left: 48px;
	transform: rotate( 9deg );
}

@keyframes swim {
	from {
		left: 0%;
	}

	to {
		left: 100%;
	}
}

